--- a/page-register.html
+++ b/page-register.html
@@ -55,7 +55,7 @@
                                     </div>
                                     <button class="btn login-form__btn submit w-100" id="myButton">Register</button>
                                 </form>
-                                    <p class="mt-5 login-form__footer">Have account <a href="page-login.html" class="text-primary">Sign In </a> now</p>
+                                    <p class="mt-5 login-form__footer">Have account <a href="index.html" class="text-primary">Sign In </a> now</p>
                                     </p>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
     <script src="js/styleSwitcher.js"></script>
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "page-login.html";
+            location.href = "index.html";
         };
     </script>
 </body>
