--- a/home_page.html
+++ b/home_page.html
@@ -371,7 +371,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="card gradient-2">
-                            <a href="x">
+                            <a href="control_eeg.html">
                               <div class="card-body">
                                   <h3 class="card-title text-white"></h3>
                                   <div class="d-inline-block">
